// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Node Listing Metric Cell should format N/A as the metric for an offline node 1`] = `
<div
  class="monTableCell__number monTableCell__offline"
>
  N/A
</div>
`;

exports[`Node Listing Metric Cell should format a non-percentage metric 1`] = `
<div
  class="euiStat euiStat--leftAligned"
>
  <div
    class="euiText euiText--small euiStat__description"
  >
    <p />
  </div>
  <p
    class="euiTitle euiTitle--large euiStat__title"
  />
  <div
    class="euiFlexGroup euiFlexGroup--gutterLarge euiFlexGroup--alignItemsCenter euiFlexGroup--directionRow euiFlexGroup--responsive"
    intl="[object Object]"
  >
    <div
      class="euiFlexItem euiFlexItem--flexGrowZero"
    >
      <h4
        class="euiTitle euiTitle--medium"
      >
        206.3 GB 
        <span
          class="fa fa-long-arrow-down"
        />
      </h4>
    </div>
    <div
      class="euiFlexItem euiFlexItem--flexGrowZero"
    >
      <div
        class="euiText euiText--extraSmall"
      >
        206.5 GB max
      </div>
      <div
        class="euiText euiText--extraSmall"
      >
        206.3 GB min
      </div>
    </div>
  </div>
  <p />
</div>
`;

exports[`Node Listing Metric Cell should format a percentage metric 1`] = `
<div
  class="euiStat euiStat--leftAligned"
>
  <div
    class="euiText euiText--small euiStat__description"
  >
    <p />
  </div>
  <p
    class="euiTitle euiTitle--large euiStat__title"
  />
  <div
    class="euiFlexGroup euiFlexGroup--gutterLarge euiFlexGroup--alignItemsCenter euiFlexGroup--directionRow euiFlexGroup--responsive"
    intl="[object Object]"
  >
    <div
      class="euiFlexItem euiFlexItem--flexGrowZero"
    >
      <h4
        class="euiTitle euiTitle--medium"
      >
        0% 
        <span
          class="fa fa-long-arrow-down"
        />
      </h4>
    </div>
    <div
      class="euiFlexItem euiFlexItem--flexGrowZero"
    >
      <div
        class="euiText euiText--extraSmall"
      >
        2% max
      </div>
      <div
        class="euiText euiText--extraSmall"
      >
        0% min
      </div>
    </div>
  </div>
  <p />
</div>
`;
